cmake_minimum_required(VERSION 3.17)
project(client C)

set(CMAKE_C_STANDARD 11)

if(WIN32 AND NOT MINGW)
    link_libraries(ws2_32 wsock32)
    add_executable(client main.c client.h client_win.h client_win.c client_udp_win.c)
elseif(WIN32 AND MINGW)
    link_libraries(ws2_32 wsock32)
    add_executable(client main.c client.h client_win.h client_win.c client_udp_win.c)
elseif(UNIX AND NOT ANDROID)
    add_executable(client main.c client.h client_linux.h client_linux.c client_udp_linux.c)
elseif(ANDROID)
    message("ANDROID")
endif()